# edit

./: .gitignore  CMakeLists.txt  README.md  makefile
include/: function.h  myclass.h
src/: edit.cpp  function.cpp  myclass.cpp
